# hub

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ops  Makefile  README.md  benchmark.sh  benchmark_http.sh  benchmark_ws.sh  cspell.json
.devcontainer/: devcontainer.json
.github/workflows/: commit.yml  docker-publish.yml  helm-publish.yml  hub.yml  ops.yml  pr_merge.yml
chart/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
chart/templates/tests/: test-connection.yaml
data/: assign-channels.json  create-channels.json  hub-settings.json  ws1-settings.json
html/: index.html
k8s/rhiaqey-hub/: Chart.yaml  values.yaml
k8s/rhiaqey-hub/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
modules/: Cargo.toml
modules/src/remove-duplicates/: mod.rs
src/: lib.rs  main.rs
src/cli/: assign_channels.rs  create_channels.rs  exe.rs  generate_keys.rs  load_settings.rs  mod.rs  run.rs  security.rs
src/cli/commands/: generate_keys.rs  load_settings.rs  mod.rs  run.rs
src/http/: auth.rs  channels.rs  client.rs  common.rs  metrics.rs  mod.rs  server.rs  settings.rs  sse.rs  state.rs  websocket.rs  websockets.rs
src/hub/: channel.rs  channels.rs  client.rs  exe.rs  hub.rs  messages.rs  metrics.rs  mod.rs  run.rs  settings.rs  simple_channel.rs  sse_client.rs  streaming_channel.rs  websocket_client.rs
src/hub/client/: mod.rs  sse.rs  websocket.rs
