[package]
name = "rhiaqey-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[dependencies]
rhiaqey-sdk = { git = "https://github.com/rhiaqey/sdk.git" }
rhiaqey-common = { git = "https://github.com/rhiaqey/common.git" }
env_logger = "0.10"
log = "0.4"
lazy_static = { version = "1.4" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
prometheus = { version = "0.13", features = [ "process" ] }
rustis = { version = "0.10", features = [ "redis-json", "tokio-runtime" ] }
tokio = { version = "1.27", features = ["full"] }
axum = { version = "0.6", features = ["headers", "http2", "json", "macros",
    "original-uri", "tokio", "ws", "form", "query", "matched-path", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
uuid = { version = "1.3", features = [ "v4", "fast-rng" ] }
sha256 = "1.1"
url = "2.3"

[[bin]]
name = "hub"
src = "src/bin/hub.rs"
