[package]
name = "rhiaqey-hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-common = { git = "https://github.com/rhiaqey/common.git" }
env_logger = "0.10"
log = "0.4"
lazy_static = { version = "1.4" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
prometheus = { version = "0.13", features = [ "process" ] }
rustis = { version = "0.12", features = [ "redis-json", "tokio-runtime" ] }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.6", features = ["headers", "http2", "json", "macros",
    "original-uri", "tokio", "ws", "form", "query", "matched-path", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
sha256 = "1.4"
sha2 = "0.10"
url = "2.5"
http = "0.2"
headers-client-ip = { version = "0.1" }
rsa = { version = "0.9", features = [ "pem" ] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"], optional = true }
tower-cookies = "0.9"
rusty_ulid = "2.0"

[features]
cli = ["dep:clap"]

[[bin]]
name = "hub"
src = "src/bin/hub.rs"

[[bin]]
name = "ops"
src = "src/bin/ops.rs"
required-features = [ "cli" ]
