[package]
name = "rhiaqey-hub"
version = "0.1.372"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[dependencies]
rhiaqey-sdk-rs = { git = "https://github.com/rhiaqey/sdk-rs.git" }
rhiaqey-common = { git = "https://github.com/rhiaqey/common.git" }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
prometheus = { version = "0.14" }
redis = { version = "0.29", features = ["tokio-comp", "sentinel"] }
tokio = { version = "1.44", features = ["full"] }
axum = { version = "0.8", features = ["http2", "json", "macros",
    "original-uri", "tokio", "ws", "form", "query", "matched-path", "multipart"] }
hyper = { version = "1.6", features = ["full"] }
sha256 = "1.6"
url = "2.5"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
rusty_ulid = { version = "2.0" }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
axum-client-ip = "0.7"
jsonschema = "0.29"
openssl = { version = "0.10", features = ["vendored"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = { version = "1.0" }
rmp-serde = { version = "1.3" }
lazy_static = "1.5"
async-stream = "0.3"
